/* དགོངས་པ་རྫོགས་པའི་སྐོར། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -686,6 +686,21 @@
 ==== དགོངས་པ་རྫོགས་པའི་སྐོར། ==== 
 <big>སྡེ་སྲིད་མཆོག་ སྤྱི་ལོ་ ༡༨༦༡ གི་ལོ་ལུ་ གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་ཕེབས་པའི་ཤུལ་ལུ་ ནད་གཞི་དྲག་པོ་ཅིག་ཟུན་ཏེ་ དྲག་ར་མ་བཏུབ་ལས་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ ཡུན་མ་རིངམོ་ཅིག་གི་ཤུལ་ལས་ར་དགོངས་པ་རྫོགས་སོ་ནུག་གོ།།</big>
 
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བདུན་པ་ཕུན་ཚོགས་རྣམ་རྒྱལ་གྱི་མཛད་རྣམ། ===
+==== སྡེ་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། 	 ====
+		
+<big>སྡེ་པ་ཕུན་ཚོགས་རྣམ་རྒྱལ་མཆོག་ དབང་འདུས་རྫོང་ཁག་ ཤར་སྦེད་ནག་ལུ་འཁྲུངས་ཡོདཔ་དང་ མཚན་དོན་གྲུབ་ཟེར་གསོལ་ནུག། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ རྫོང་གོང་མའི་སྒྲིག་ནང་བཞུགས་ཏེ་ གནག་དཔོན་གྱི་གོ་གནས་བཞེས་བཞུགས་ཡོདཔ་ལས་ མཚན་ལུ་གནག་རྫི་པ་སངས་ཟེར་ཞུ་གསོལ་དར་ནུག། དབང་རྫོངཔ་ཀུན་དགའ་དཔལ་ལྡན་སྡེ་མཆོག་ ཁྲི་ལུ་འབྱོནམ་ད་ ཁོ་རའི་ཚ་བོ་གནག་དཔོན་གནག་རྫི་པ་སངས་འདི་ དབང་རྫོང་པའི་གོ་གནས་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big> 
+==== སྡེ་ཁྲི་ཁར་བྱོན་པའི་ལོ་རྒྱུས། ====
+		
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཞེ་ལྔ་པ་ ཀུན་དགའ་དཔལ་ལྡན་གྱིས་ སྡེ་པ་ཨུ་མ་དྷེ་ཝ་བཀྲོངས་པའི་ཤུལ་ལས་ ཀུན་དགའ་དཔལ་ལྡན་རང་རྐྱང་གིས་ རྒྱལ་ཁབ་ལོ་ངོ་ལྔ་ལྷག་ཙམ་སྐྱོང་བའི་མཐའ་མ་ སྐུ་ལུ་བསྙུང་གཞི་ཚབས་ཆེན་ཅིག་གིས་བཏབ་སྟེ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དགོཔ་འཐོནམ་ད་ སྤྱི་ལོ་ ༡༨༦༡ གི་ལོ་ལུ་ སྡེ་པ་ཁོ་རའི་ཚ་བོ་དོན་གྲུབ་འདི་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བདུན་པའི་ཁྲི་ཐོག་ལུ་བསྐོ་བཞག་མཛད་གནང་ཡོདཔ་དང་ དེའི་ཚེ་ རྗེ་ཡོན་ཏན་རྒྱལ་མཚན་གྱིས་ སྡེ་སྲིད་ཁོ་རའི་མཚན་ཕུན་ཚོགས་རྣམ་རྒྱལ་ཟེར་གསོལ་གནང་ནུག།</big> 
+==== སྡེ་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ==== 
+<big>དབང་རྫོངཔ་དོན་གྲུབ་མཆོག་སྡེ་ཁྲི་ལུ་བྱོན་ཏེ་ ལོ་གཅིག་ར་མ་ལངསམ་ལས་ རྗེ་མཁན་ཁྲི་རབས་སུམ་ཅུ་སོ་གསུམ་པ་ རྗེ་ཀུན་དགའ་རྒྱལ་མཚན་མཆོག་ཁྲི་ཐོག་ལུ་ར་དགོངས་པ་རྫོགས་སོཔ་ལས་ མཚན་ཉིད་སློབ་དཔོན་འོད་ཟེར་མཆོག་ རྗེ་མཁན་ཁྲི་རབས་སོ་བཞི་པའི་ཁྲི་ལུ་མངའ་གསོལ་མཛད་གནང་ནུག། ཧེ་མ་ རྗེ་ཡོན་ཏན་རྒྱལ་མཚན་དང་ སྡེ་པ་དམ་ཆོས་ལྷུན་གྲུབ་ཀྱིས་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་བཞི་པ་འཇིགས་མེད་ནོར་བུ་གིས་གཙོས་ ཕྱག་ཞུ་མི་ དགེ་འདུན་པ་ཚུ་གིས་ མཚན་འཛིན་བཏོག་ནི་ལ་སོགས་པའི་བྱ་ངན་འབདཝ་ལས་བརྟེན་ སྤྱི་ལོ་ ༡༨༦༣ གྱི་ལོ་ལུ་ བླམ་ལུ་ཐུབ་རུང་ བཀའ་སྲུང་ལུ་མི་ཐུབ་ཟེར་གསུངས་ཏེ་ བཀའ་སྲུང་ལུ་མ་མཉེས་པའི་ཕོག་ཐུག་ཨིན་ཟེར་ གསོལ་ཇ་བཞེས་པའི་སྐབས་ བཞེས་རྩམ་གྱིས་ སྤུ་ན་ཁ་རྫོང་གི་གཟུགས་བརྙེན་བཞེངས་ཏེ་ དེ་གུར་གསོལ་ཇ་ཐིགས་པ་ཅིག་བླུགས་ཙམ་གྱིས་ སྤུ་ན་ཁ་རྫོང་ཕྱེད་ཀ་ཅིག་ འཕྱག་བདའ་བའི་རྐྱེན་བྱུང་ནུག། རྐྱེན་འབྱུང་བའི་སྐབས་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་ སྡེ་སྲིད་ཕུན་ཚོགས་རྣམ་རྒྱལ་བཞུགས་ཡོདཔ་ལས་ ཉམས་གསོ་ཞུ་ནིའི་ཕྱག་ལཱ་འགོ་བཙུགས་ཡོད་རུང་ སྡེ་སྲིད་ལུ་ སྤུངས་རྫོངཔ་གིས་ངོ་རྒོལ་རྐྱབ་སྟེ་ དམག་འཁྲུག་བྱུང་མི་ལུ་བརྟེན་ཏེ་ རྫོང་ཉམས་གསོ་གི་ལཱ་ཡང་ ལེགས་ཤོམ་སྦེ་མཇུག་བསྡུ་མ་ཚུགས་པས། དེ་ཡང་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་ལྔ་པ་ཀུན་དགའ་དཔལ་ལྡན་དང་ དབང་རྫོངཔ་དོན་གྲུབ། སྤུངས་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་གསུམ་ དགའ་སེང་མར་ཚིག་ཁ་གི་རྨགཔ་འབདཝ་ལས་ སྡེ་སྲིད་ཀུན་དགའ་དཔལ་ལྡན་མཆོག་ དགོངས་ཞུ་མཛད་དེ་ སྡེ་ཁྲི་གུར་ དབང་རྫོངཔ་དོན་གྲུབ་བཀལཝ་ད་ སྤུངས་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་འདི་ དབང་རྫོང་པའི་གོ་གནས་གནང་འོང་མནོ་བའི་རེ་བ་བསྐྱེད་རུང་ དབང་རྫོངཔ་སྡེ་ཁྲི་ཁར་འབྱོནམ་ད་ དར་ལུང་སྟོབས་རྒྱས་འདི་ དབང་རྫོང་སྦེ་མ་བཀལ་བར་ སྡེ་སྲིད་དོན་གྲུབ་ཁོ་རའི་ཚ་བོ་ གཟིམ་དཔོན་སྲིད་རྒྱལ་ལུ་གནང་དཔ་ལས་ སྤུངས་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་ཀྱིས་ གཞུང་མགྲོན་གཉེར་དང་གཞུང་བཀའ་བློན་ཚུ་དང་ཁ་བསྡོམས་ཏེ་ སྡེ་སྲིད་ལུ་ངོ་རྒོལ་འབད་ནི་འགོ་བཙུགས་ནུག། དེ་བསྒང་ སྡེ་སྲིད་ཀྱི་ཁ་ཐུག་ལས་ དབང་རྫོངཔ་སྲིད་རྒྱལ་དང་ ཐིམ་ཕུག་རྫོང་དཔོན། སྤ་གྲོ་དཔོན་སློབ་ཚུ་ཡོདཔ་ལས་ སྤུངས་རྫོང་པའི་དམག་སྡེ་ཚུ་གིས་ སྡེ་སྲིད་ཀྱི་དམག་ལུ་འབད་མ་ཚུགས་པས། ཨིན་རུང་ སྤུངས་རྫོངཔ་གིས་ ཕམ་ཁ་ལེན་མ་བཏུབ་པར་ བྱ་དཀར་དཔོན་སློབ་བརྩོན་འགྲུས་རྒྱལ་མཚན་དང་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གཉིས་ལས་ དམག་རྒྱབ་འཚོལ་ནུག། སྤུངས་རྫོང་པའི་དམག་རྒྱབ་ཚུ་ ཐིམ་ཕུག་ཁ་ཐུག་འོངས་པའི་ལམ་ཁར་ དབང་རྫོང་པའི་དམག་དང་དམག་རྐྱབ་སྟེ་ རྒྱལ་ཁ་ཐོབ་ཡོདཔ་མ་ཚད། ཀྲོང་གསར་པའི་དམག་དཔོན་ཚུ་ ཅང་ལུས་སྟོད་ལུ་ལྷོདཔ་ད་ གཞུང་གི་དམག་དང་ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་དམག་སྡེ། དབང་རྫོངཔ་སྲིད་རྒྱལ་ཚུ་དང་དམག་འཐབ་ད་ གཞུང་དམག་གི་གཙོས་པའི་ཐིམ་ཕུག་དང་ དབང་རྫོང་པའི་དམག་ཕམ་ཡོདཔ་དང་ གཞན་ཚུ་བྱོག་ཐལ་ཡོད་རུང་ དབང་རྫོངཔ་སྲིད་རྒྱལ་དང་ ཐིམ་རྫོངཔ་ཀརྨ་འབྲུག་རྒྱལ་གཉིས་བྱོག་མ་ཐལ་བར་ ཀྲོང་གསར་པའི་དམག་སྡེ་དང་སྤུངས་རྫོང་པའི་དམག་སྡེ་གི་ལག་པར་ཚུད་སོ་ནུག། སྤུངས་རྫོངཔ་དང་བཀའ་བློན་གཉིས་ཀྱིས་ དགྲ་ལག་པར་ཚུདཔ་ད་བཞག་ནི་མི་འོང་ཟེར་སླབ་རུང་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ ཁོ་རྫོང་དཔོན་གཉིས་ཕྱིའི་དགྲ་མེན་པར་ ནང་གི་དགྲ་ཨིནམ་སྦེ་གཟིགས་ཏེ་ ཁོང་རྫོང་དཔོན་གཉིས་ཀྱིས་ ད་ལས་ཕར་ ངོ་རྒོལ་གྱི་བྱ་ངན་ལུ་བཅའ་མར་གཏོགས་ནི་མེད་པའི་ཁར་ རྫོང་དཔོན་རང་སོའི་ཁྱིམ་ནང་སྡོད་ནི་མ་གཏོགས་ ས་གནས་སོ་སོ་དང་ ཐ་ན་རྫོང་གཞིས་སོ་སོ་ནང་ལུ་ཡང་འགྱོ་མ་ཆོག་པའི་གན་རྒྱ་བཟོ་ཞིནམ་ལས་ ཁོང་རྫོང་དཔོན་གཉིས་ཚེ་ཐར་བཏང་ད་ནུག། དེ་ལས་ སྤུངས་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་ཁོ་ར་ ཁོ་རའི་རེ་འདོད་ལྟར་དུ་ དབང་རྫོང་པའི་གོ་གནས་བཞེས་ཡོདཔ་དང་ སྤུངས་རྫོངཔ་ཁོ་ར་ལུ་ ཆ་རོགས་འབད་བའི་དགའ་ཚོར་ལུ་ གཞུང་མགྲོན་གཉེར་བཀྲ་ཤིས་འདི་ སྤུངས་རྫོང་པའི་ཁྲི་ལུ་བསྐོ་བཞག་མཛད་ནུག།  དེ་ལས་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གྱི་སྤུན་ཆ་ རྟ་དཔོན་ཁ་གསར་སྟོབས་རྒྱས་འདི་ ཐིམ་རྫོང་པའི་གོ་གནས་ལུ་བསྐོ་བཞག་མཛད་ནུག།</big> 
+==== དགོངསམ་ཞུ་བའི་སྐོར། ==== 
+			
+<big>སྡེ་སྲིད་མཆོག་ལུ་ ཕྱིའི་གཞུང་ལས་ ས་མཚམས་ནང་སྡོད་མི་ འབྲུག་མི་ཚུ་གིས་ ཉེས་མེད་ཕྱི་མི་ཚུ་བཙན་ཁྲིད་འབད་བའི་སྐོར་ལས་ ཡི་གུ་ལེན་ག་དེམ་ཅིག་ར་བཏང་རུང་ འབྲུག་གཞུང་ལས་ལན་གསལ་མེདཔ་མ་ཚད་ ཕྱི་མི་ཚུ་ སྡེ་སྲིད་དང་མཇལ་བར་ཐིམ་ཕུག་ལྷོད་རུང་ མཇལ་ཁ་མ་གནང་པར་ ཁོ་གི་ཚབ་ གཟིམ་སྒརཔ་གཏང་ནི་སྦེ་ཡོད་རུང་ ནང་འཁྲུག་འདི་ལུ་བརྟེན་ཏེ་ གཏང་མ་ཚུགས་པར་ལུས་སོ་ནུག། དེ་སྦེ་སྡོད་པའི་བར་ན་ར་ གཞུང་དགེ་འདུན་པ་གི་ཧོངས་ལས་ སྡེ་སྲིད་མཆོག་ སྤུངས་རྫོང་པའི་དམག་ཕམ་སོཔ་ལས་ སྡེ་སྲིད་ལས་དགོངསམ་ཞུ་དགོཔ་སྦེ་ཞུ་ནི་འདི་གིས་ སྤྱི་ལོ་ ༡༨༦༣ གི་ལོ་ལུ་དགོངས་ཞུ་སྟེ་ སྤ་རོ་ལུ་བྱོན་ཏེ་བཞུགས་ནུག་གོ།།
+</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
