/* དགོངསམ་ཞུ་བའི་སྐོར། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -701,6 +701,21 @@
 <big>སྡེ་སྲིད་མཆོག་ལུ་ ཕྱིའི་གཞུང་ལས་ ས་མཚམས་ནང་སྡོད་མི་ འབྲུག་མི་ཚུ་གིས་ ཉེས་མེད་ཕྱི་མི་ཚུ་བཙན་ཁྲིད་འབད་བའི་སྐོར་ལས་ ཡི་གུ་ལེན་ག་དེམ་ཅིག་ར་བཏང་རུང་ འབྲུག་གཞུང་ལས་ལན་གསལ་མེདཔ་མ་ཚད་ ཕྱི་མི་ཚུ་ སྡེ་སྲིད་དང་མཇལ་བར་ཐིམ་ཕུག་ལྷོད་རུང་ མཇལ་ཁ་མ་གནང་པར་ ཁོ་གི་ཚབ་ གཟིམ་སྒརཔ་གཏང་ནི་སྦེ་ཡོད་རུང་ ནང་འཁྲུག་འདི་ལུ་བརྟེན་ཏེ་ གཏང་མ་ཚུགས་པར་ལུས་སོ་ནུག། དེ་སྦེ་སྡོད་པའི་བར་ན་ར་ གཞུང་དགེ་འདུན་པ་གི་ཧོངས་ལས་ སྡེ་སྲིད་མཆོག་ སྤུངས་རྫོང་པའི་དམག་ཕམ་སོཔ་ལས་ སྡེ་སྲིད་ལས་དགོངསམ་ཞུ་དགོཔ་སྦེ་ཞུ་ནི་འདི་གིས་ སྤྱི་ལོ་ ༡༨༦༣ གི་ལོ་ལུ་དགོངས་ཞུ་སྟེ་ སྤ་རོ་ལུ་བྱོན་ཏེ་བཞུགས་ནུག་གོ།།
 </big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བརྒྱད་པ་ཚེ་དབང་སྲིད་ཐུབ་ཀྱི་མཛད་རྣམ། ===
+==== སྡེ་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ==== 
+		
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བརྒྱད་པ་ ཚེ་དབང་སྲིད་ཐུབ་མཆོག་ ཐིམ་ཕུག་ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་ སྨད་ཝང་མཁར་སྦིས་ས་ལུ་འཁྲུངས་ཡོདཔ་དང་ སྡེ་སྲིད་མཆོག་སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ རྫོང་སྒར་ལྟོའི་སྒྲིག་ནང་བཞུགས་ཡོདཔ་མ་ཚད་ རིམ་གྱིས་སྦེ་ ཐིམ་རྫོང་གི་གཉེར་ཆེན་གྱི་གོ་གནས་བཞེས་ཡོདཔ་ཨིན་པས། དེའི་ཚེ་ སྡེ་སྲིད་མཆོག་གིས་ རང་གི་འགན་ཁུར་འཐུས་ཤོར་ག་ནི་ཡང་མེད་པར་ཕྱག་ཞུ་ནི་འདི་གིས་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་ཁྲི་གུར་མངའ་གསོལ་མཛད་ནུག།</big>
+==== སྡེ་ཁྲི་གུར་བྱོན་པའི་སྐོར། 	 ====
+			
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བདུན་པ་ ཕུན་ཚོགས་རྣམས་རྒྱལ་མཆོག་ སྤུངས་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་ཀྱི་དམག་ལས་ཕམ་སོཔ་ལས་བརྟེན་ གཞུང་དགེ་འདུན་གྲྭ་ཚང་གི་ཁ་ཐུག་ལས་ དགོངས་ཞུ་དགོཔ་སྦེ་བསྐུལ་མ་གནངམ་ལས་ སྤྱི་ལོ་ ༡༨༦༣ གི་ལོ་ལུ་དགོངས་ཞུ་མཛད་པའི་ཤུལ་ལས་ ཐིམ་རྫོངཔ་ཚེ་དབང་སྲིད་ཐུབ་འདི་ དགེ་འདུན་དམངས་ཀྱི་རྒྱབ་སྐྱོར་ལས་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བརྒྱད་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big>
+==== སྡེ་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ==== 
+			
+<big>སྡེ་སྲིད་མཆོག་ སྨད་ཝང་ལས་འབད་ནི་འདི་གིས་ སྟོད་ཝང་གི་མི་སེར་ཚུ་གིས་ ཐིམ་རྫོངཔ་ཚེ་དབང་སྲིད་ཐུབ་མཆོག་ སྡེ་སྲིད་ཨིན་ཟེར་ངོས་ལེན་འབད་མ་བཏུབ་མ་ཚད་ ནང་འཁྲུག་སློང་མི་ལུ་བརྟེན་ རྗེ་སྐུ་བགྲེས་ཡོན་ཏན་རྒྱལ་མཚན་དང་ བླ་མ་ཁྲི་པ་བཤད་སྒྲུབ་འོད་ཟེར་གཉིས་ཀྱིས་ ནང་འཁྲུག་ཞི་ཐབས་ལུ་  ཚུལ་ཁྲིམས་ཡོན་ཏན་འདི་ སྡེ་ཁྲི་ལུ་བཀལ་ད་ནུག། ཨིན་རུང་ སྡེ་སྲིད་བགྲེསཔ་ཕུན་ཚོགས་རྣམ་རྒྱལ་འདི་ལུ་མ་རངས་པར་ དྲག་པོའི་ལེན་མཇལ་ལས་བརྟེན་ཏེ་ ཟི་ལུ་ཁ་པ་ཚུལ་ཁྲིམས་ཡོན་ཏན་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ ལོ་གཅིག་ར་མ་བཞུགསཔ་ལས་གཤགས་སོ་ནུག།</big> 
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། ==== 
+			
+<big>སྡེ་སྲིད་ཚུལ་ཁྲིམས་ཡོན་ཏན་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་གཤགས་སོ་པའི་ཤུལ་ལས་ དོ་རུང་ སྟོད་ཝང་གི་མི་སེར་ཚུ་གིས་ ནང་འཁྲུག་སློང་ནི་འགོ་བཙུགསཔ་ལས་ སྡེ་སྲིད་ཚེ་དབང་སྲིད་ཐུབ་ཡང་ སྡེ་ཁྲི་གུར་ལོ་གཅིག་ཙམ་བཞུགས་པའི་ཤུལ་ལས་ སྤྱི་ལོ་ ༡༨༦༤ གི་ལོ་ལུ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་གནང་ནུག།
+</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
