/* སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -716,6 +716,17 @@
 <big>སྡེ་སྲིད་ཚུལ་ཁྲིམས་ཡོན་ཏན་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་གཤགས་སོ་པའི་ཤུལ་ལས་ དོ་རུང་ སྟོད་ཝང་གི་མི་སེར་ཚུ་གིས་ ནང་འཁྲུག་སློང་ནི་འགོ་བཙུགསཔ་ལས་ སྡེ་སྲིད་ཚེ་དབང་སྲིད་ཐུབ་ཡང་ སྡེ་ཁྲི་གུར་ལོ་གཅིག་ཙམ་བཞུགས་པའི་ཤུལ་ལས་ སྤྱི་ལོ་ ༡༨༦༤ གི་ལོ་ལུ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་གནང་ནུག།
 </big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཞེ་དགུ་པ་ ཚུལ་ཁྲིམས་ཡོན་ཏན་གྱི་མཛད་རྣམ། ===
+==== སྡེ་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ།	 ====
+		
+<big>སྡེ་པ་ཚུལ་ཁྲིམས་ཡོན་ཏན་མཆོག་ ཐིམ་ཕུག་སྟོད་ཝང་གི་ནང་གསེས་ ཀ་ཝང་ཟི་ལུ་ཁ་ལུ་འཁྲུངས་ཡོདཔ་དང་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ དགེ་འདུན་གྲྭ་ཚང་གི་སྡེ་ལུ་བཞུགས་ཏེ་ གར་ཐིག་དབྱངས་གསུམ་ལ་སོགས་པའི་དགེ་འདུན་པའི་སྒྲིག་ལམ་ཚུ་ལུ་མཐར་ཕྱིནམ་མ་ཚད་ ཆོས་ཁྲིམས་ཀྱི་ཐུགས་འགན་ཚུ་ཡང་གྲོལ་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་སྐོར། 	 ====
+			
+<big>སྡེ་སྲིད་ཕུན་ཚོགས་རྣམ་རྒྱལ་མཆོག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་བའི་ཤུལ་ལས་ དགེ་འདུན་དམངས་ཀྱིས་རྒྱབ་སྐྱོར་ཐོག་ལས་ ཐིམ་རྫོངཔ་ཚེ་དབང་སྲིད་ཐུབ་མཆོག་ སྡེ་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ཡོད་རུང་ སྟོད་ཝང་གི་མི་སེར་ཚུ་གིས་ ནང་འཁྲུག་སློང་བའི་སྐབས་ ནང་འཁྲུག་ཞི་ཐབས་ལུ་ རྗེ་ཁྲི་ཟུར་ཡོན་ཏན་རྒྱལ་མཚན་དང་ བླ་མ་ཁྲི་པ་བཤད་སྒྲུབ་འོད་ཟེར་གཉིས་ཐུགས་མཐུན་ཐོག་ལས་ ཆོས་ཁྲིམས་བགྲེསཔ་ཚུལ་ཁྲིམས་ཡོན་ཏན་མཆོག་ སྡེ་སྲིད་ཐིམ་རྫོངཔ་ཚེ་དབང་སྲིད་ཐུབ་དང་གཅིག་ཁར་ སྡེ་ཁྲི་ལུ་བསྐོ་བཞག་མཛད་དེ་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་དགུ་པ་ལུ་གྱུར་ནུག་གོ།</big> 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་གཤགས་པའི་ལོ་རྒྱུས།	 ====
+			
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བརྒྱད་པ་ ཚེ་དབང་སྲིད་ཐུབ་མ་བཏུབ་པའི་སྐོར་ལས་ སྟོད་ཝང་མི་སེར་གྱིས་ ནང་འཁྲུག་སློང་སྟེ་ སྡེ་ཁྲི་ལུ་ ཟི་ལུ་ཁ་པ་ཚུལ་ཁྲིམས་ཡོན་ཏན་བསྐོ་བཞག་མཛད་མི་ལུ་ སྡེ་སྲིད་བགྲེསཔ་ཕུན་ཚོགས་རྣམ་རྒྱལ་མ་རངས་པར་ རྗེ་བཤད་སྒྲུབ་འོད་ཟེར་ལུ་ཞུ་སྟེ་ མནན་བསྲེགས་འཕངས་གསུམ་གྱི་དྲག་པོའི་ལན་མཇལཝ་ལས་བརྟེན་ སྡེ་སྲིད་ཚུལ་ཁྲིམས་ཡོན་ཏན་མཆོག་ སྤྱི་ལོ་ ༡༨༦༤ ལུ་སྡེ་ཁྲི་ལུ་བྱོན་ཏེ་ལོ་གཅིག་ར་མ་ལངསམ་ལས་གཤགས་སོ་ནུག་གོ།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
