/* སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -71,11 +71,14 @@
 
 === སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་ས་སྐྱོང་མི་དབང་ངག་དབང་རྒྱ་མཚོའི་མཛད་རྣམ། ===
 ==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
-སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་ ས་སྐྱོང་མི་དབང་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ གཡུས་ཝང་ཚ་ལུང་ནང་ལུ་སྐུ་འཁྲུངས་ཡོདཔ་དང་། སྡེ་སྲིད་མཆོག་གིས་ སྐུ་ཡོན་མཁས་པ་སྦྱངས་ཏེ་ དགེ་བཤེས་ཀྱི་མཚན་ཐོབ་ཡོདཔ་དང་ ཤུལ་ལས་སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ཕེབས་ཞིནམ་ལས་ ཆོས་རྒྱལ་གྱི་མཚན་ཡང་ཐོབ་ནུག། དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་བརྒྱད་པ་འབྲུག་རབ་རྒྱས་ཀྱི་སྐུ་ཚ་བོ་ཨིན་མས། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ གྲྭ་ཚང་འདུས་སྡེ་ལུ་བཞུགས་ཏེ་ སྐུ་ཡོན་དང་སྒྲིག་ལམ་ དཀྱིལ་མཆོག་གི་དབྱངས་ཐིག་གར་གསུམ་ལུ་མཁས་པ་སྦྱངས་ཡོདཔ་མ་ཚད་ སྒྲ་རིག་པ་དང་སྙན་ངག། སྡེབ་སྦྱོར་སོགས་རིག་གནས་ཚུ་ བླ་མ་ཙནྡྲ་པ་ལས་མཐར་ཕྱིན་སྦེ་མཛད་དེ་ དགེ་བཤེས་ཀྱི་མཚན་ཡོངས་གྲགས་ཐོན་ཡོདཔ་ལས་ དགེ་འདུན་པའི་ཚོགས་ནང་ལས་དྲག་ཤོས་ཅིག་ཨིན་མས།
-ཞབས་དྲུང་གསུང་སྤྲུལ་དང་པ་ ཕྱོགས་ལས་རྣམ་རྒྱལ་མཆོག་ སྤྱི་ལོ་ ༡༧༡༣ ལུ་ དབང་འདུས་ཕོ་བྲང་རྫོང་ལུ་གདན་འདྲེན་ཞུ་སྟེ་་ སྡེ་སྲིད་ཁྲི་རབས་བརྒྱད་པ་འབྲུག་རབ་རྒྱས་ཀྱིས་ ས་སྐྱོང་མི་དབང་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྤྲུལ་སྐུ་ལུ་ སྐུ་ཡོན་ཕུལ་མི་སློབ་དཔོན་སྦེ་བཀལ་གནང་ནུག།
-སྡེ་སྲིད་འབྲུག་རབ་རྒྱས་མཆོག་ སྤྱི་ལོ་ ༡༧༡༩ ལུ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་དེ་  སྤྱི་ལོ་ ༡༧༢༠ པའི་གསར་ཚེས་ཀྱི་ཟླཝ་དེ་ནང་ གདན་ས་སྤུ་ན་ཁ་ལུ་སྦེ་ ཁོ་རའི་ཚ་བོ་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག།
-སྤྱི་ལོ་ ༡༧༢༠ ལུ་སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་འབྱོན་པའི་དུས་ལུ་ སྤྱི་ལོ་ ༡༧༡༤ ལས་ཞབས་དྲུང་གསུང་སྤྲུལ་དང་པ་ རྗེ་བཙུན་ཕྱོགས་ལས་རྣམ་རྒྱལ་མཆོག་ བླམ་ཁྲི་པའི་གསེར་ཁྲི་ལུ་བཞུགས་ཡོདཔ་དང་། གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཀྱི་ཡང་སྲིད་ཨིནམ་སྦེ་ངོས་འཛིན་གྲུབ་སྟེ་ སྤྱི་ལོ་ ༡༧༢༡ ལས་ སྒང་སྟེང་སྤྲུལ་སྐུ་བསྟན་འཛིན་ལེགས་པའི་དོན་གྲུབ་ཀྱི་བླ་ཚབ་སྦེ་མཛད་བཞུགས་ནུག། རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་མཆོག་ སྤྱི་ལོ་ ༡༧༡༧ ལུ་ རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་གྱི་ཡང་སྲིད་སྦེ་སྐུ་འཁྲུངས་ནུག།
- 
+<big>སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་ ས་སྐྱོང་མི་དབང་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ གཡུས་ཝང་ཚ་ལུང་ནང་ལུ་སྐུ་འཁྲུངས་ཡོདཔ་དང་། སྡེ་སྲིད་མཆོག་གིས་ སྐུ་ཡོན་མཁས་པ་སྦྱངས་ཏེ་ དགེ་བཤེས་ཀྱི་མཚན་ཐོབ་ཡོདཔ་དང་ ཤུལ་ལས་སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ཕེབས་ཞིནམ་ལས་ ཆོས་རྒྱལ་གྱི་མཚན་ཡང་ཐོབ་ནུག། དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་བརྒྱད་པ་འབྲུག་རབ་རྒྱས་ཀྱི་སྐུ་ཚ་བོ་ཨིན་མས། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ གྲྭ་ཚང་འདུས་སྡེ་ལུ་བཞུགས་ཏེ་ སྐུ་ཡོན་དང་སྒྲིག་ལམ་ དཀྱིལ་མཆོག་གི་དབྱངས་ཐིག་གར་གསུམ་ལུ་མཁས་པ་སྦྱངས་ཡོདཔ་མ་ཚད་ སྒྲ་རིག་པ་དང་སྙན་ངག། སྡེབ་སྦྱོར་སོགས་རིག་གནས་ཚུ་ བླ་མ་ཙནྡྲ་པ་ལས་མཐར་ཕྱིན་སྦེ་མཛད་དེ་ དགེ་བཤེས་ཀྱི་མཚན་ཡོངས་གྲགས་ཐོན་ཡོདཔ་ལས་ དགེ་འདུན་པའི་ཚོགས་ནང་ལས་དྲག་ཤོས་ཅིག་ཨིན་མས།<br>
+
+ཞབས་དྲུང་གསུང་སྤྲུལ་དང་པ་ ཕྱོགས་ལས་རྣམ་རྒྱལ་མཆོག་ སྤྱི་ལོ་ ༡༧༡༣ ལུ་ དབང་འདུས་ཕོ་བྲང་རྫོང་ལུ་གདན་འདྲེན་ཞུ་སྟེ་་ སྡེ་སྲིད་ཁྲི་རབས་བརྒྱད་པ་འབྲུག་རབ་རྒྱས་ཀྱིས་ ས་སྐྱོང་མི་དབང་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྤྲུལ་སྐུ་ལུ་ སྐུ་ཡོན་ཕུལ་མི་སློབ་དཔོན་སྦེ་བཀལ་གནང་ནུག།<br>
+
+སྡེ་སྲིད་འབྲུག་རབ་རྒྱས་མཆོག་ སྤྱི་ལོ་ ༡༧༡༩ ལུ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་དེ་  སྤྱི་ལོ་ ༡༧༢༠ པའི་གསར་ཚེས་ཀྱི་ཟླཝ་དེ་ནང་ གདན་ས་སྤུ་ན་ཁ་ལུ་སྦེ་ ཁོ་རའི་ཚ་བོ་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག།<br>
+
+སྤྱི་ལོ་ ༡༧༢༠ ལུ་སྡེ་སྲིད་ཁྲི་རབས་དགུ་པ་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་འབྱོན་པའི་དུས་ལུ་ སྤྱི་ལོ་ ༡༧༡༤ ལས་ཞབས་དྲུང་གསུང་སྤྲུལ་དང་པ་ རྗེ་བཙུན་ཕྱོགས་ལས་རྣམ་རྒྱལ་མཆོག་ བླམ་ཁྲི་པའི་གསེར་ཁྲི་ལུ་བཞུགས་ཡོདཔ་དང་། གོང་ས་མི་ཕམ་དབང་པོ་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཀྱི་ཡང་སྲིད་ཨིནམ་སྦེ་ངོས་འཛིན་གྲུབ་སྟེ་ སྤྱི་ལོ་ ༡༧༢༡ ལས་ སྒང་སྟེང་སྤྲུལ་སྐུ་བསྟན་འཛིན་ལེགས་པའི་དོན་གྲུབ་ཀྱི་བླ་ཚབ་སྦེ་མཛད་བཞུགས་ནུག། རྒྱལ་སྲས་འཇིགས་མེད་ནོར་བུ་མཆོག་ སྤྱི་ལོ་ ༡༧༡༧ ལུ་ རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་གྱི་ཡང་སྲིད་སྦེ་སྐུ་འཁྲུངས་ནུག།</big>
+
 ==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
 <big>སྡེ་སྲིད་དགེ་བཤེས་ངག་དབང་རྒྱ་མཚོ་གིས་ དཀྱིལ་ཆོག་གར་ཐིག་དབྱངས་གསུམ་ཡར་རྒྱས་དང་ གུ་རུ་རིན་པོ་ཆེའི་སྒྲུབ་གནས་ཚུ་ནང་ གསོལ་འདེབས་དང་ལྷན་སྐྱེས་ཚུ་བཙུགས་གནང་ཡོདཔ་མ་ཚད་ སྡེབ་སྦྱོར་རིན་ཆེན་འབྱུང་གནས་ ཟ་མ་ཏོག་དང་ སུམ་རྟགས་དང་ སྒྲ་ཀ་ཙན་དབྱངས་གསུམ་ལ་སོགས་པའི་རིག་གནས་ཚུ་ཡང་བཙུགས་གནང་ནུག།<br>
 
