--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -730,6 +730,21 @@
 			
 <big>སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བརྒྱད་པ་ ཚེ་དབང་སྲིད་ཐུབ་མ་བཏུབ་པའི་སྐོར་ལས་ སྟོད་ཝང་མི་སེར་གྱིས་ ནང་འཁྲུག་སློང་སྟེ་ སྡེ་ཁྲི་ལུ་ ཟི་ལུ་ཁ་པ་ཚུལ་ཁྲིམས་ཡོན་ཏན་བསྐོ་བཞག་མཛད་མི་ལུ་ སྡེ་སྲིད་བགྲེསཔ་ཕུན་ཚོགས་རྣམ་རྒྱལ་མ་རངས་པར་ རྗེ་བཤད་སྒྲུབ་འོད་ཟེར་ལུ་ཞུ་སྟེ་ མནན་བསྲེགས་འཕངས་གསུམ་གྱི་དྲག་པོའི་ལན་མཇལཝ་ལས་བརྟེན་ སྡེ་སྲིད་ཚུལ་ཁྲིམས་ཡོན་ཏན་མཆོག་ སྤྱི་ལོ་ ༡༨༦༤ ལུ་སྡེ་ཁྲི་ལུ་བྱོན་ཏེ་ལོ་གཅིག་ར་མ་ལངསམ་ལས་གཤགས་སོ་ནུག་གོ།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ལྔ་བཅུ་པ་དཀར་བརྒྱུད་དབང་ཕྱུག་གི་མཛད་རྣམ། ===
+==== སྡེ་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ==== 
+			
+<big>སྡེ་སྲིད་ལྔ་བཅུ་པ་ དཀར་བརྒྱུད་དབང་ཕྱུག་མཆོག་ སྤ་རོ་ཤར་པ་ལུ་འཁྲུངས་ཡོདཔ་དང་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ དགེ་འདུན་འདུས་སྡེ་ནང་བཞུགས་ཡོདཔ་མ་ཚད་ རྗེ་ཤེས་རབ་རྒྱལ་མཚན་རྩ་བའི་བླམ་སྦེ་བསྟེན་ཏེ་ གར་ཐིག་དབྱངས་གསུམ་དང་མན་ངག་ལ་སོགས་པའི་རིག་གནས་ལུ་མཁས་པ་སྦྱངས་ནུག། དེ་ལས་ ཁོ་རའི་ལྕོགས་གྲུབ་ལུ་བརྟེན་ཏེ་ བལ་པོ་རྒྱལ་པོའི་དབུ་ལྷ་སྦེ་མཛད་ཡོདཔ་མ་ཚད་ གངས་རི་འབྲུག་མགོན་པའི་བདག་སྐྱོང་སྦེ་ཡང་མཛད་ནུག། དེ་ལས་ ལོག་སྟེ་འབྲུག་ལུ་འབྱོནམ་ད་ འབུལ་བ་ཡོངས་རྫོགས་འབྲུག་གཞུང་ལུ་ཕུལཝ་ལས་ ཡོངས་གྲགས་ཐོན་སོ་ནུག།</big> 
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ལོ་རྒྱུས། ==== 
+				
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཞེ་དགུ་པ་མཆོག་ ནང་འཁྲུག་བྱུང་བའི་རྐྱེན་གྱིས་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་པའི་ཤུལ་ལས་ དཔོན་སློབ་དང་ རྫོང་དཔོན་ཚུ་གི་བར་ན་ ཆགས་སྡང་ཕྱོགས་རིས་སྦོམ་བྱུང་ཡོདཔ་ལས་ འདི་ཞི་ཐབས་ལུ་ དགེ་འདུན་འདུས་ཚོགས་ཀྱིས་ གངས་རི་བླ་ཟུར་དཀར་བརྒྱུད་དབང་ཕྱུག་འདི་ སྤྱི་ལོ་ ༡༨༦༤ གི་ལོ་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ལྔ་བཅུ་པའི་ཁྲི་ཐོག་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big> 
+==== སྡེ་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+ 			
+<big>སྤྱི་ལོ་ ༡༨༦༢ ལུ་སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བདུན་པ་ ཕུན་ཚོགས་རྣམ་རྒྱལ་གྱི་སྐབས་ལུ་ ཕྱི་གཞུང་གི་བཏང་བའི་གྲོས་འཆར་ལུ་ འབྲུག་གཞུང་ལས་ངོས་ལེན་འབད་མ་བཏུབ་ལས་བརྟེན་ ཕྱི་གཞུང་དོན་གཅོད་པ་ ཨེཤི་ལི་ཨི་ཌེན་འདི་ སྤྱི་ལོ་ ༡༨༦༤ གི་ལོ་ལུ་ ཆིངས་ཡིག་དོན་ཚན་བཅུ་ཐམ་ཅན་འདི་འབག་སྟེ་ འབྲུག་གཞུང་དང་གཅིག་ཁར་ བློ་སླབ་པར་ཐག་རང་བཅད་ཀྱི་ཐོག་ལས་ སྤུ་ན་ཁ་ལུ་ལྷོད་ནུག། དེའི་སྐབས་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་གཙོས་ཏེ་ གཞུང་ལྷན་ཚོགས་དང་ཁ་སླབ་ཡོདཔ་མ་ཚད་ སྡེ་སྲིད་ཁྲི་རབས་ལྔ་བཅུ་པ་དང་ བླ་མ་ཁྲི་པ་ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་དང་ཡང་ མཇལ་འཕྲད་བྱུང་ནུག། ཕྱི་གླིང་པའི་ཆིངས་ཡིག་ནང་ ཕྱི་གཞུང་གི་སྐུ་ཚབ་འབྲུག་ལུ་བཙུགས་ཆོགཔ་སྦེ་ཡོདཔ་མ་ཚད་ ཚོང་ཁྲལ་ག་ནི་ཡང་མེད་པར་ འབྲུག་ནང་འཁོད་ལུ་ ཚོང་འབྲེལ་འཐབ་ཆོགཔ་སྦེ་ཡོདཔ་ལས་ འབྲུག་གཞུང་གི་ངོས་ལེན་འབད་མ་བཏུབ་མ་ཚད་ ཧེ་མ་ཕྱི་གཞུང་གི་ལག་པར་ཚུད་མི་ ཨ་སམ་དྲུའར་ཚུ་ འབྲུག་གཞུང་ལུ་ལོག་རྩིས་སྤྲོད་འབད་དགོཔ་དང་ ཕྱི་གཞུང་གིས་འབྲུག་གཞུང་ལུ་ ས་ཁྲལ་དང་འདྲཝ་སྦེ་ ལོ་བསྟར་བཞིན་དུ་ ཏི་རུ་འབུམ་གསུམ་སྤྲོད་དགོཔ་སྦེ་ ཆིངས་ཡིག་སོ་སོ་ཅིག་ར་ འབྲུག་གཞུང་གི་ཧོངས་ལས་བཟོ་སྟེ་ ཨུ་ཚུགས་རྐྱབ་ཐོག་ལས་ ས་ཡིག་རྐྱབ་བཅུག་ནུག།</big>
+ 
+==== སྡེ་པ་མཆོག་གི་མཛད་པ་མཐའ་མ། 	 ====
+		
+<big>སྡེ་སྲིད་མཆོག་ ཧེ་མ་གངས་རི་བླམ་མཛད་བཞུགསཔ་ད་ རྗེ་ཡོན་ཏན་རྒྱལ་མཚན་གྱིས་ གངས་རི་བླམ་ལུ་ འབྲུག་ལུ་མེད་པའི་ལུགས་ མི་བསྐྱོད་རྡོ་རྗེའི་གསང་བ་འདུས་པ་ལ་སོགས་པ་ དབང་ལུང་བཅས་ཞུ་དགོཔ་སྦེ་བཀའ་སྐུལ་གནངམ་ལས་ བླམ་གིས་ཡང་ རྗེ་གིས་བཀའ་གནངམ་བཞིན་དུ་མཛད་དེ་ ལོག་འབྲུག་ལུ་ཕེབས་ད་ དབང་ལུང་ཡོངས་རྫོགས་ཅིག་ རྗེ་ལུ་ཕུལ་ནུག། དེ་བཟུམ་མའི་བསྟན་འགྲོ་ལུ་ཕན་སྦོམ་ཐོགས་པའི་དབུ་བླ་ཅིག་ཨིན་རུང་ སྐུ་ཚེ་གི་ལྕོགས་གྲུབ་མ་བྱུངམ་མ་ཚད་ སྡེ་པ་མཆོག་ སྡེ་ཁྲི་གུར་ ལོ་གཅིག་ར་མ་བཞུགསཔ་ལས་ དགོངས་པ་རྫོགས་སོ་ནུག་གོ།།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
