/* སྡེ་པ་མཆོག་གི་མཛད་པ་མཐའ་མ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -745,6 +745,27 @@
 		
 <big>སྡེ་སྲིད་མཆོག་ ཧེ་མ་གངས་རི་བླམ་མཛད་བཞུགསཔ་ད་ རྗེ་ཡོན་ཏན་རྒྱལ་མཚན་གྱིས་ གངས་རི་བླམ་ལུ་ འབྲུག་ལུ་མེད་པའི་ལུགས་ མི་བསྐྱོད་རྡོ་རྗེའི་གསང་བ་འདུས་པ་ལ་སོགས་པ་ དབང་ལུང་བཅས་ཞུ་དགོཔ་སྦེ་བཀའ་སྐུལ་གནངམ་ལས་ བླམ་གིས་ཡང་ རྗེ་གིས་བཀའ་གནངམ་བཞིན་དུ་མཛད་དེ་ ལོག་འབྲུག་ལུ་ཕེབས་ད་ དབང་ལུང་ཡོངས་རྫོགས་ཅིག་ རྗེ་ལུ་ཕུལ་ནུག། དེ་བཟུམ་མའི་བསྟན་འགྲོ་ལུ་ཕན་སྦོམ་ཐོགས་པའི་དབུ་བླ་ཅིག་ཨིན་རུང་ སྐུ་ཚེ་གི་ལྕོགས་གྲུབ་མ་བྱུངམ་མ་ཚད་ སྡེ་པ་མཆོག་ སྡེ་ཁྲི་གུར་ ལོ་གཅིག་ར་མ་བཞུགསཔ་ལས་ དགོངས་པ་རྫོགས་སོ་ནུག་གོ།།</big>
 
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ང་གཅིག་པ་ སྡེ་སྲིད་ཁྲི་ཟུར་ཚེ་དབང་སྲིད་ཐུབ་ཀྱི་མཛད་རྣམ། ===
+==== སྡེ་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། 	 ====
+	
+<big>སྡེ་སྲིད་ཁྲི་རབས་ང་གཅིག་པ་ ཚེ་དབང་སྲིད་ཐུབ་མཆོག་ ཐིམ་ཕུག་ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་ སྨད་ཝང་མཁར་སྦིས་ས་ལུ་འཁྲུངས་ཡོདཔ་དང་ སྡེ་སྲིད་མཆོག་སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ རྫོང་སྒར་ལྟོའི་སྒྲིག་ནང་བཞུགས་ཡོདཔ་མ་ཚད་ རིམ་གྱིས་སྦེ་ ཐིམ་རྫོང་གཉེར་ཆེན་གྱི་གོ་གནས་བཞེས་ཡོདཔ་ཨིན་པས། དེའི་ཚེ་ སྡེ་སྲིད་མཆོག་གིས་ རང་གི་འགན་ཁུར་འཐུས་ཤོར་ག་ནི་ཡང་མེད་པར་ཕྱག་ཞུ་ནི་འདི་གིས་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་ཁྲི་གུར་མངའ་གསོལ་མཛད་ནུག།</big>
+==== སྡེ་ཁྲི་ཁར་བྱོན་པའི་ལོ་རྒྱུས། 	 ====
+	
+<big>སྡེ་སྲིད་ཁྲི་རབས་ལྔ་བཅུ་པ་ ཁྲི་ཐོག་ལུ་དགོངས་པ་རྫོགས་སོཔ་ལས་ དགེ་འདུན་པའི་སྡེ་གིས་ཞུཝ་བཞིན་དུ་ སྡེ་པ་ཁྲི་ཟུར་ཚེ་དབང་སྲིད་ཐུབ་མཆོག་ སྤྱི་ལོ་ ༡༨༦༤ གི་ལོ་ལུ་ ལོག་སྟེ་ར་སྡེ་ཁྲི་ལུ་བྱོན་གནང་ནུག།</big> 
+=== སྡེ་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། 	༼ཕྱིའི་དམག་གི་གདོང་ལེན།༽ === 
+	
+<big>སྤྱི་ལོ་ ༡༨༦༤ ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ལྔ་བཅུ་པའི་སྐབས་ ཕྱི་གཞུང་ལས་ ཆིངས་ཡིག་འབག་འོང་མི་ ཕྱི་གཞུང་གི་དོན་གཅོདཔ་ ཨེཤི་ལི་ཨི་ཌེན་ལུ་ འབྲུག་ལྷན་ཚོགས་ཀྱིས་ ཕྱི་གླིང་པའི་ཆིངས་ཡིག་འདི་ ངོས་ལེན་མ་མཛདཔ་མ་ཚད་ ཕྱི་གཞུང་གིས་འབྲུག་གཞུང་ལུ་ ས་ཁྲལ་བཏབ་དགོཔ་ལ་སོགས་པ་བཀོད་ཡོད་པའི་ཆིངས་ཡིག་གུར་ ས་ཡིག་རྐྱབ་བཅུགཔ་ལས་ ཕྱི་གཞུང་གི་དོན་གཅོདཔ་ ཨེཤི་ལི་ཨི་ཌེན་ རྒྱ་ལུ་ལོག་ལྷོདཔ་ད་ སྙན་ཞུ་ངན་པ་ཕུལཝ་ལས་བརྟེན་ ཕྱི་གཞུང་གིས་ རྒྱ་འབྲུག་གཉིས་ཀྱི་ས་མཚམས་བེང་གཱལ་དྲུའར་ ༡༡ ག་ར་ གཏན་འཇགས་ཀྱི་དོན་ལུ་བཙན་ལེན་འབད་ནི་སྦེ་ ཕྱི་གཞུང་གི་དམག་མི་ སྟོང་ཕྲག་བཅུ་ཐམ་དེ་ཅིག་ འབྲུག་གི་ས་མཚམས་སོ་སོ་ལས་ཕར་གཏང་ནི་འགོ་བཙུགས་ནུག། དེའི་གདོང་ལེན་ལུ་ འབྲུག་གཞུང་ལས་ ཐིམ་རྫོངཔ་ཁ་གསར་སྟོབས་རྒྱས་དང་ བཀའ་བློན་མ་མཁལ་གྱིས་གཙོས་པའི་དམག་མི་ཚུ་ དཔག་བསམ་ཁ་ལས་མར་བཏང་ཡོདཔ་དང་ སྤ་རོ་དཔོན་སློབ་ཉི་མ་རྡོ་རྗེ་དང་ གཞུང་མགྲོན་གཉེར་དམ་ཆོས་རིན་ཆེན་གཉིས་ཀྱིས་གཙོས་པའི་དམག་མི་ཚུ་ ཇའི་སྒང་ལས་མར་བཏང་ཡོདཔ་ཨིན་མས། དབང་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་དང་ དར་དཀར་དཔོན་སློབ་ཀྱིས་གཙོས་པའི་དམག་མི་ཚུ་ གསར་སྤང་ལས་མར་བཏང་ཡོདཔ་མ་ཚད་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་དང་ བྱ་དཀར་དཔོན་སློབ་བརྩོན་འགྲུས་རྒྱལ་མཚན། བླ་མ་ཁྲི་པའི་གཟིམ་དཔོན་བསོད་ནམས་དོན་གྲུབ་གསུམ་གྱིས་གཙོས་པའི་དམག་མི་ཚུ་ བདེ་བ་ཐང་ལས་མར་བཏང་སྟེ་ ཕྱི་གླིང་པའི་དམག་དང་གཅིག་ཁར་ ཕྱད་མདའ་རྐྱབ་ནི་འགོ་བཙུགས་ནུག། དེའི་ཚེ་ གསར་སྤང་ལས་མར་འགྱོ་མི་ དབང་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་དང་ དར་དཀར་དཔོན་སློབ་གཉིས་ཀྱི་ཁ་ཐུག་ལས་ གནས་ཚུལ་འདི་དང་འདི་ཟེརཝ་ཅིག་ ག་ནི་ཡང་མེདཔ་མ་ཚད་ གཞན་ཇའི་སྒང་དང་ དཔག་བསམ་ཁ་ལས་འགྱོ་མི་དམག་མི་ཚུ་ ཕྱི་གླིང་པའི་དམག་ལས་ཕམ་སོཔ་མ་ཚད་ འབྲུག་གི་ས་གནས་ཅ་མར་མི་ལས་འགོ་བཙུགས་ དཔག་བསམ་ཁ་ཚུན་ཚོད་ ཕྱི་གླིང་པའི་ལགཔ་ལུ་ཤོར་སོ་ནུག། ཨིན་རུང་ བདེ་བ་ཐང་ལས་མར་འགྱོ་མི་ ཀྲོང་གསར་དཔོན་སློབ་དང་ བྱ་དཀར་དཔོན་སློབ། དེ་ལས་ གཟིམ་དཔོན་ཚུ་གིས་ འབྲུག་པའི་ས་གནས་བདེ་ཝང་གུ་རི་ལས་ བདེ་བ་ཐང་རྫོང་ཚུན་ཚོད་ཤོར་སོ་རུང་ ལོག་ཕྱི་དམག་དང་ཕྱད་མདའ་རྐྱབ་ད་ རྒྱལ་ཁ་ཐོབ་ཡོདཔ་དང་ ཕྱི་གླིང་པའི་དམག་སྡེ་ཚུ་ འབྲུག་གི་ས་མཚམས་བརྒལ་ཏེ་བདའ་བཏང་ནུག། ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ ཕྱི་གླིང་པའི་མེ་སྒྱོགས་སྟོབས་གཉིས་དང་ མཚོན་ཆ་ཚུ་ ཀྲོང་གསར་ལུ་བསྣམས་བྱོན་ཡོདཔ་ཨིན་པས།</big> 
+=== ཕྱི་གཞུང་དང་མཐུན་འབྲེལ། === 
+		
+<big>དེ་གི་ཤུལ་ལས་ར་ ཕྱི་གླིང་པའི་དམག་ཚུ་གིས་ དམག་ལེན་ལོག་རྐྱབ་པའི་སྐབས་ལུ་ འབྲུག་པའི་ས་གནས་བདེ་བ་ཐང་ཚུན་ཚོད་ ཕྱིའི་དམག་ལུ་ཤོར་སོ་ནུག། དེའི་སྐབས་ ཕྱི་གླིང་པའི་དམག་སྡེ་ཚུ་གིས་ འབྲུག་གཞུང་ལུ་ ཧེ་མ་ཤོར་ཡོད་པའི་མེ་སྒྱོགས་སྟོབས་གཉིས་དེ་ བལ་པོ་ལས་བརྙ་འབག་འོངས་འོངསམ་འབད་ནི་འདི་གིས་ ཕྱི་གཞུང་ལུ་ལོག་རྩིས་སྤྲོད་དགོཔ་སྦེ་སླབ་སྟེ་ ཞི་བའི་གསུང་གྲོས་གནང་དགོ་པའི་ཞུ་བ་ཕུལ་ཡོདཔ་དང་ གལ་སྲིད་ཞི་བའི་གསུང་གྲོས་གནང་ནི་གུར་མ་གནས་པ་ཅིན་ ཕྱིའི་དམག་ཚུ་ འབྲུག་ནང་འཁོད་ལུ་བཏང་སྟེ་ འབྲུག་གི་ས་ཆ་ག་ར་ ཕྱི་གཞུང་གི་འོག་ལུ་བཙུགས་ནི་ཟེར་སླབ་པའི་སྐབས་ འབྲུག་གཞུང་གི་ཧོངས་ལས་ཡང་ ཞི་བའི་གསུང་གྲོས་གནང་ནི་གུར་མཐའ་གཏོགས་ནུག། དེ་འབདཝ་ལས་ ཕྱི་གཞུང་དང་ཆིངས་ཡིག་དོན་ཚན་བཅུ་ཐམས་ཅན་མ་བཟོ་ནིའི་དོན་ལུ་ འབྲུག་གཞུང་གི་སྐུ་ཚབ་སྦེ་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གྱི་གཙོས་ སྡེ་པའི་གཟིམ་དཔོན་བསམ་གྲུབ་རྡོ་རྗེ་དང་ གཞུང་གི་གཉེར་ཆེན་དམ་ཆོས་རིན་ཆེན་ཚུ་ སྤྱི་ལོ་ ༡༨༦༥ ཟླཝ་ ༡༡ པ་ལུ་ ས་གནས་སུན་ཅུ་ལ་ལུ་བཏང་ནུག། “ཆིངས་ཡིག་འདི་ནང་ འབྲུག་ནུབ་ཕྱོགས་ཀྱི་རྒྱ་གཞིས་ བེང་གཱལ་དྲུའར་ ༡༡ དང་ དྷ་ལིམ་རྫོང་། འབྲས་ལྗོངས་སྨད། རྡོ་རྗེ་གླིང་ཕྱོགས་དང་བཅས་པའི་ས་ཁོངས་ག་ར་ ཕྱི་གཞུང་གི་གཏན་འཇགས་སྦེ་དབང་ནི་དང་། དེ་ཚུ་གི་ཚབ་ལུ་ ལོ་བསྟར་གྱི་ས་ཁྲལ་ཧེ་མ་ ཨ་སམ་ཕྱོགས་ལས་འཐོབ་ནི་ཡོད་པའི་ཁྲལ་བཅས་བསྡོམས་དངུལ་ཀྲམ་༥༠,༠༠༠ རེ་ཕྱི་གཞུང་གིས་འབྲུག་ལུ་སྤྲོད་དགོཔ་དང་ ཕྱི་འབྲུག་མཐུན་ལམ་ལུ་གནས་ནི་ལ་སོགས་པའི་དོན་ཚན་ ༡༠ ཚུད་དེ་ཡོདཔ་ཨིན་པས།” ༼ སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ་གྱི་ཤོག་གྲངས ༤༠༩ ༽ ཆིངས་ཡིག་འདི་བཟོ་བའི་ཤུལ་ལས་ རྒྱ་འབྲུག་གཉིས་ཀྱི་ས་མཚམས་འདི་ གཏན་འཁེལ་སོང་ཡོདཔ་ཨིན་མས།</big> 
+=== བླ་མ་ཁྲི་པ་དང་རྗེ་མཁན་པོའི་ཁྲི་མངའ་གསོལ། 	 ===
+	
+<big>ཞབས་དྲུང་གསུང་སྤྲུལ་ལྔ་པ་ ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་མཆོག་ བླ་མ་ཁྲི་པ་ཁྲི་རབས་བཅོ་ལྔ་པའི་ཁྲི་ལུ་ སྤྱི་ལོ་ ༡༨༦༥ གི་ལོ་ལུ་ མངའ་གསོལ་ཞུ་ཡོདཔ་དང་ རྗེ་མཁན་ཁྲི་རབས་སོ་བཞི་པ་ རྗེ་བཤད་གྲུབ་འོད་ཟེར་ མཁན་ཁྲི་ལས་དགོངས་ཞུ་མཛད་ཞིནམ་ལས་ ཤཱཀྱ་རྒྱལ་མཚན་མཆོག་ རྗེ་མཁན་ཁྲི་རབས་སོ་ལྔ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་མཛད་གནང་ནུག།</big>
+=== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། 	 ===
+	
+<big>སྡེ་སྲིད་མཆོག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་ཡོདཔ་ཨིན་ན་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ར་བཀྲོངས་ཡོདཔ་ཨིན་ན་ ཁ་གསལ་སྦེ་བཀོད་དེ་མེད་རུང་ སྡེ་སྲི་ཁྲི་རབས་ང་གཉིས་པ་ སྤྱི་ལོ་ ༡༨༦༧ གི་ལོ་ལུ་ མངའ་གསོལ་ཞུ་ཡོདཔ་སྦེ་ དཔེ་ཆ་ཚུ་ནང་བཀོད་ཡོད་མི་ལུ་བལྟ་བ་ཅིན་ སྡེ་སྲིད་ཁོ་གི་སྐབས་ལུ་ ཕྱི་གཞུང་དང་དམག་ལེན་གྲངས་མང་རབས་ཅིག་བྱུང་ཡོདཔ་མ་ཚད་ ནང་འཁྲུག་ཡང་བྱུང་དང་འབྱུང་བཞིན་པ་ཡོདཔ་ལས་ སྡེ་སྲིད་མཆོག་ མ་རངས་པའི་མི་ངན་ཚུ་གིས་བཀྲོངས་ཡོདཔ་ ཚད་དཔག་ཚུགསཔ་ཨིན་མས།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
