/* སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -766,6 +766,20 @@
 	
 <big>སྡེ་སྲིད་མཆོག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་ཡོདཔ་ཨིན་ན་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ར་བཀྲོངས་ཡོདཔ་ཨིན་ན་ ཁ་གསལ་སྦེ་བཀོད་དེ་མེད་རུང་ སྡེ་སྲི་ཁྲི་རབས་ང་གཉིས་པ་ སྤྱི་ལོ་ ༡༨༦༧ གི་ལོ་ལུ་ མངའ་གསོལ་ཞུ་ཡོདཔ་སྦེ་ དཔེ་ཆ་ཚུ་ནང་བཀོད་ཡོད་མི་ལུ་བལྟ་བ་ཅིན་ སྡེ་སྲིད་ཁོ་གི་སྐབས་ལུ་ ཕྱི་གཞུང་དང་དམག་ལེན་གྲངས་མང་རབས་ཅིག་བྱུང་ཡོདཔ་མ་ཚད་ ནང་འཁྲུག་ཡང་བྱུང་དང་འབྱུང་བཞིན་པ་ཡོདཔ་ལས་ སྡེ་སྲིད་མཆོག་ མ་རངས་པའི་མི་ངན་ཚུ་གིས་བཀྲོངས་ཡོདཔ་ ཚད་དཔག་ཚུགསཔ་ཨིན་མས།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ང་གཉིས་པ་ མཚན་སློབ་བརྩོན་འགྲུས་པད་དཀར་གྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ==== 
+			
+<big>སྡེ་སྲིད་མཆོག་གི་འཁྲུངས་ཡུལ་དང་ འཁྲུངས་པའི་ཟླ་ཚེས་ཚུ་ ཆོས་འབྱུང་ག་ཏེ་ཡང་བཀོད་དེ་མེད་རུང་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ གྲྭ་སྡེ་ལུ་བཞུགས་ཏེ་ གྲྭ་སྡེའི་སྒྲིག་ལམ་དང་ གར་ཐིག་དབྱངས་གསུམ་ལུ་ མཁས་པ་སྦྱངས་ཡོདཔ་མ་ཚད་ གཞུང་དང་མན་ངག་ཚུ་ལུ་ མཁས་པ་གྱུར་ཡོད་མི་ལུ་བརྟེན་ མཚན་ཉིད་བཤད་གྲྭའི་སློབ་དཔོན་གྱི་གོ་གནས་བཞེས་བཞུགས་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་པའི་ལོ་རྒྱུས། 	 ====
+			
+<big>སྡེ་སྲིད་ཁྲི་རབས་ང་གཅིག་པ་ ཚེ་དབང་སྲིད་ཐུབ་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ སྤྱི་ལོ་ ༡༨༦༧ ལུ་ གཤགས་སོཔ་ལུ་བརྟེན་ དགེ་འདུན་དམངས་དང་ དཔོན་སློབ་རྫོང་སློབ་ཚུ་གིས་ རྗེ་ཁྲི་ཟུར་ཡོན་ཏན་རྒྱལ་མཚན་ལུ་ སྡེ་པའི་ཁྲི་ལུ་འབྱོན་དགོ་པའི་ཞུ་བ་དང་གསོལཝ་བཏབ་སྟེ་་ར་འབད་རུང་ རྗེ་ཁྲི་ཟུར་མཆོག་ སྐུ་ན་བགྲེས་ཏེ་ཡོདཔ་ལས་ བསྟན་འགྲོ་དང་རྒྱལ་ཁབ་ལུ་ཕན་ཐོགས་འབྱུང་ཚུགས་པའི་ནུས་པ་ང་ལུ་མི་འབྱུང་ཟེར་གསུངས་ཏེ་ སྡེ་ཁྲི་ལུ་འབྱོན་ནིའི་ཁ་བཟེད་མ་བཏུབ་པས། གལ་སྲིད་ བསྟན་འགྲོ་དང་ རྒྱལ་ཁབ་ལུ་ཕན་ཐོགས་དགོ་པ་ཅིན་ བསྟན་འཛིན་གྱི་སྐྱེས་བུ་གཅིག་ སྡེ་ཁྲི་ལུ་བསྐོ་བཞག་མཛད་དགོཔ་སྦེ་གསུངས་ཏེ་ མཚན་སློབ་བརྩོན་འགྲུས་པད་དཀར་ལུ་ འོས་འབབ་ཡོད་པའི་བཀའ་བསྐུལ་གནངམ་ལས་ སྤྱི་ལོ་ ༡༨༦༧ རང་ལུགས་གནམ་ལོ་མེ་མོ་ཡོས་ལོ་ རབ་འབྱུང་བཅོ་ལྔ་པའི་རང་ཟླ་ལྔ་པའི་ཡར་ཚེས་ལུ་ མཚན་སློབ་བརྩོན་འགྲུས་པད་དཀར་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ང་གཉིས་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big>
+==== རྫོང་དཔོན་དང་དཔོན་སློབ་ཚུ་གི་བར་ན་ ནང་འགྲིག་ཀྱི་ཕྱག་འགན་བཞེས་པའི་སྐོར། ==== 
+			
+<big>མཚན་སློབ་མཆོག་ སྡེ་ཁྲི་ལུ་བྱོན་པའི་ལོ་དེ་ནང་ར་ ཐིམ་རྫོངཔ་ཁ་གསར་སྟོབས་རྒྱས་དང་ སྤུངས་རྫོངཔ་བྲང་བཀྲི་ཤིས་གཉིས་ཀྱིས་ དབང་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་ཀྱི་ཨམ་སྲུ་ཚེ་དབང་ཆོས་འཛོམས་ ཐིམ་ཕུག་བལ་པོའི་ན་ལས་ཨིན་མི་འདི་ ཨརཝ་བརྐུ་མི་ལུ་བརྟེན་ དབང་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་ཀྱིས་ ཐིམ་རྫོངཔ་ཁ་གསར་སྟོབས་རྒྱས་བསད་དེ་ བཀའ་བློན་ཀ་ཝང་མ་མཁལ་ ཐིམ་རྫོང་པའི་གོ་གནས་ལུ་ ཐག་རང་བཅད་ཀྱི་སྒོ་ལས་བསྐོ་བཞག་མཛད་གནང་ནུག། འདི་ལུ་ སྤུངས་རྫོངཔ་བྲང་བཀྲ་ཤིས་ངལ་མ་རངས་པར་ དབང་རྫོངཔ་བགྲེསཔ་ཤར་སྲིད་རྒྱལ་ལས་རྒྱབ་སྐྱོར་ལེན་ཏེ་ དབང་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་དང་ ཐིམ་རྫོང་པའི་དམག་སྡེ་ ཕྱད་མདའ་རྐྱབ་རུང་ སྤུངས་རྫོང་པའི་དམག་དང་ དབང་རྫོངཔ་བགྲེས་པའི་དམག་གིས་ ཐིམ་རྫོང་པའི་དམག་དང་ དབང་རྫོང་པའི་དམག་ལུ་འབད་མ་ཚུགས་པར་ སྤུངས་རྫོང་པའི་དམག་དང་ དབང་རྫོང་བགྲེས་པའི་དམག་ཚུ་ཕམ་ནི་གུར་ལྷོདཔ་ད་ སྤུངས་རྫོངཔ་བྲང་བཀྲ་ཤིས་ཀྱིས་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་ལས་དམག་རྒྱབ་ཞུ་དགོཔ་ཐོན་སོ་ནུག། ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་ཡང་ དབང་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་ཀྱིས་ ཁོ་རའི་སྐུ་ཉེ་ ཁ་གསར་སྟོབས་རྒྱས་བསད་མི་ལུ་ངལ་མ་རངས་པར་ཡོདཔ་ལས་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ སྤ་རོ་དཔོན་སློབ་བགྲེསཔ་ཉིམ་རྡོ་རྗེ་དང་ བླམ་ཁྲི་པ་འཕྲིན་ལས་བཟང་པོ་གཉིས་ལུ་ དམག་རྒྱབ་ཀྱི་བརྡ་བསྐུལ་ཏེ་ ཕྱད་མདའ་རྐྱབ་ནུག། སྤུངས་རྫོང་པའི་དམག། དབང་རྫོང་བགྲེས་པའི་དམག་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་དམག་སྡེ། སྤ་རོ་དཔོན་སློབ་ཀྱི་དམག་སྡ་དང་ བླམ་ཁྲི་པའི་དམག་ཚུ་ཁ་བསྡོམས་ཏེ་ ཐིམ་རྫོང་པའི་དམག་དང་དབང་རྫོང་པའི་དམག་དང་གཅིག་ཁར་ཕྱད་མདའ་རྐྱབ་ཏེ་ ཡུན་རིངམོ་ཡར་་སོ་རུང་ རྒྱལ་ཕམ་ཕྱེ་མ་ཚུགས་པས། དེ་སྦེ་སྡོད་པའི་བར་ན་ར་ རྗེ་ཁྲི་ཟུར་ཡོན་ཏན་རྒྱལ་མཚན་དང་ སྡེ་སྲིད་དགེ་འདུན་དམངས་ཀྱིས་ མི་སེར་གྱི་སྐྱིད་སྡུག་ལུ་གཟིགས་ཏེ་ ནང་འཁྲུག་ཞི་དགོ་པའི་ཞི་འདུམ་མཛད་གནང་ནུག། དེ་ཅིག་གི་བར་ན་ར་ སྤོ་རོ་དཔོན་སློབ་ཉིམ་རྡོ་རྗེ་དང་ བླ་མ་ཁྲི་པ་འཕྲིན་ལས་བཟང་པོ་གཉིས་ཀྱི་བར་ན་ མ་འགྲིགསཔ་ཐོན་ཏེ་ དོ་རུང་མི་སེར་བདེ་སྐྱིད་མེདཔ་སོང་ཡོད་མི་ལུ་བརྟེན་ རྗེ་ཁྲི་ཟུར་ཡོན་ཏན་རྒྱལ་མཚན་གྱིས་གཙོས་པའི་དཔོན་སློབ་ཁག་ཚུ་ ནང་འགྲིག་བཟོ་བར་བཏང་སྟེ་ ནང་འགྲིག་བཟོ་གནང་ནུག།</big> 
+==== སྡེ་སྲིད་མཆོག་གི་མཐའ་མའི་མཛད་རྣམ། ====
+ 			
+<big>སྡེ་སྲིད་མཆོག་ སྤུངས་རྫོངཔ་དང་ཐིམ་རྫོང་པའི་ནང་འཁྲུག། བླ་མ་ཁྲི་པ་དང་སྤ་རོ་དཔོན་སློབ་ལ་སོགས་པའི་ནང་འཁྲུག་ལུ་བརྟེན་ ཐུགས་སྐྱིད་ཏོང་ཏོ་ཅིག་སྦེ་བཞུགས་མ་ཚུགསཔ་མ་ཚད་ སྐུ་ཡང་བགྲེས་སོཔ་ལས་བརྟེན་ སྡེ་སྲིད་མཚན་སློབ་བརྩོན་འགྲུས་པད་དཀར་མཆོག་ སྡེ་ཁྲི་ལུ་ལོ་གཅིག་ར་བཞུགས་མ་ཚུགསཔ་ལས་ སྡེ་ཁྲི་ལུ་བྱོན་པའི་ལོ་འདི་ལུ་ར་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ དགོངས་པ་རྫོགས་སོ་ནུག་གོ།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
