/* སྡེ་སྲིད་མཆོག་གི་མཐའ་མའི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -780,6 +780,25 @@
  			
 <big>སྡེ་སྲིད་མཆོག་ སྤུངས་རྫོངཔ་དང་ཐིམ་རྫོང་པའི་ནང་འཁྲུག། བླ་མ་ཁྲི་པ་དང་སྤ་རོ་དཔོན་སློབ་ལ་སོགས་པའི་ནང་འཁྲུག་ལུ་བརྟེན་ ཐུགས་སྐྱིད་ཏོང་ཏོ་ཅིག་སྦེ་བཞུགས་མ་ཚུགསཔ་མ་ཚད་ སྐུ་ཡང་བགྲེས་སོཔ་ལས་བརྟེན་ སྡེ་སྲིད་མཚན་སློབ་བརྩོན་འགྲུས་པད་དཀར་མཆོག་ སྡེ་ཁྲི་ལུ་ལོ་གཅིག་ར་བཞུགས་མ་ཚུགསཔ་ལས་ སྡེ་ཁྲི་ལུ་བྱོན་པའི་ལོ་འདི་ལུ་ར་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ དགོངས་པ་རྫོགས་སོ་ནུག་གོ།</big>
 
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ང་གསུམ་པ་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ།	 ====
+ལུང་བསྟན་ཅན་གྱི་སྐྱེས་མཆོག་ གཏེར་ཆེན་པདྨ་གླིང་པའི་གདུང་རྒྱུད་ལས་ སྡེ་སྲིད་ཁྲི་རབས་ང་གསུམ་པ་ འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་ ཡབ་པི་ལ་མགོན་པོ་དབང་རྒྱལ་དང་ ཡུམ་བསོད་ནམས་སྒྲོལ་མ་གཉིས་ཀྱི་སྲས་ལུ་ རང་ལུགས་འདས་ལོ་ ༡༧༥ སྤྱི་ལོ་ ༡༨༢༥ རབ་བྱུང་བཅུ་བཞི་པའི་ཤིང་མོ་བྱ་ལོ་ལུ་ ངོ་མཚར་བའི་རྟགས་མཚན་དང་བཅས་ ཀུར་སྟོད་ལུ་སྦེ་སྐུ་འཁྲུངས་ནུག། དེ་ལས་ རྩིས་གཞུང་དང་འཁྲིལ་ཏེ་མཚན་ཡང་ བསམ་གྲུབ་ཟེར་གསོལ་ནུག། 
+==== ཕྱག་འགན་དང་གོ་གནས་གཞན་བཞེས་གནང་པའི་སྐོར། ==== 
+<big>སྐྱེས་ལོ་ ༡༢ དེ་ཅིག་བཞེས་པའི་བསྒང་ལས་ ཁོ་རའི་གཉིད་ལམ་ནང་ ཁོ་གི་གདུལ་བྱ་ཀྲོང་གསར་དང་བུམ་ཐང་ཁ་ཐུག་ཡོདཔ་ ལོག་ཅི་ལོག་ཅི་ར་གཟིགསཔ་ལས་ ཁོ་དགུང་ལོ་བཅོ་བརྒྱད་དེ་ཅིག་བཞེསཔ་ད་  ཐུགས་ཐག་རང་བཅད་ཀྱི་ཐོག་ལས་ བུམ་ཐང་ལས་ཐོན་ཏེ་ ཀྲོང་གསར་གྱི་ཕྱོགས་ལུ་བྱོན་ནུག། ཀྲོང་གསར་ལུ་ཕེབས་ད་ ཀྲོང་གསར་གྱི་སྤྱི་བླ་ཨོ་རྒྱན་ཕུན་ཚོགས་དང་ མགྲོན་གཉེར་མཚོ་སྐྱེས་་རྡོ་རྗེ་གཉིས་ཀྱི་ སྒར་ལྟོའི་གྲལ་ཁར་བཅའ་མར་གཏོགས་གནང་ནུག། ཤུལ་མ་ མགྲོན་གཉེར་མཚོ་སྐྱེས་རྡོ་རྗེ་ ཀྲོང་གསར་སྤྱི་བླའི་ཁྲི་ཁར་ཕེབས་པའི་ཤུལ་ལུ་ ཀྲོང་གསར་སྒར་ལྟོའི་གྲས་ལས་ དཔའ་བོ་ཤུགས་ཆེ་ཤོས་ འཇིགས་མེད་རྣམ་རྒྱལ་ལས་གཞན་ག་ཡང་མེདཔ་ལས་ འཇིགས་མེད་རྣམ་རྒྱལ་ལུ་ ཀྲོང་གསར་རྫོང་གི་དར་དཔོན་དང་ ཚོང་དཔོན་གྱི་ཕྱག་འགན་བཞེས་གནང་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༨༤༨ ཀྱི་ལོ་ལུ་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་གཟིམ་དཔོན་གྱི་ཕྱག་འགན་བཞེས་གནང་ནུག།<br>
+བྱིན་ཅན་གྱི་རྫོང་གཞིས་རྙིང་ཤོས་ སྤུངས་ཐང་བདེ་བ་ཆེན་པོའི་ཕོ་བྲང་འདི་ མེ་མཆོད་ཐེངས་ལྔ་པ་བཞེས་པའི་ཉམས་གསོ་ཞུ་བའི་སྐབས་ ཤར་ཕྱོགས་ལས་འུར་ལཱ་པའི་འགོ་འདྲེན་འཐབ་མི་སྦེ་ ཆོས་གཟིམ་འཇིགས་མེད་རྣམ་རྒྱལ་བྱོན་ཡོདཔ་དང་ དེའི་བསྒང་ ལུང་ཕྱོགས་རང་སོའི་མིང་གཏམ་གྱི་དོན་ལུ་ གཉའ་རྒོད་ཀྱི་འགྲན་བསྡུར་འགོ་འདྲེན་འཐབ་ད་ འཇིགས་མེད་རྣམ་རྒྱལ་ལུ་ ག་གིས་ཡང་འབད་མ་ཚུགསཔ་ལས་ ཤར་ཕྱོགས་ཀྱི་མིང་གཏམ་དང་ འཇིགས་མེད་རྣམ་རྒྱལ་རང་གི་མིང་གཏམ་སྦོམ་ར་བཞག་ནུག། དེའི་སྐབས་ལུ་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱི་རིག་རྩལ་དང་ དཔའ་རྩལ་ལུ་བལྟ་སྟེ་ ནུབ་ཕྱོགས་ཀྱི་དཔོན་ཁག་དང་དཔོན་སློབ་ཚུ་ ཁོ་ལུ་ངལ་མ་རངས་པར་ཡོདཔ་ལས་ སྤུངས་རྫོང་ཉམས་གསོ་ཞུ་ཚར་ཏེ་ རབ་གནས་དགའ་སྟོན་གྱི་དོན་ལུ་ ཀྲོང་གསར་དཔོན་སློབ་མཚོ་སྐྱེས་རྡོ་རྗེ་ཡང་བྱོན་ཡོདཔ་ལས་ དེའི་ཚེ་ སྐུ་གསོད་རྐྱབ་ཏེ་བཀྲོངས་ནི་སྦེ་འཆར་གཞི་བརྩམས་ཡོད་རུང་ ཆོས་གཟིམ་དཔའ་རྩལ་ཅན་གྱི་བཀའ་དྲིན་ལས་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་སྲོག་ལུ་ གནོད་སྐྱོན་ཆུང་ཀུ་ཅིག་ར་མེདཔ་སྦེ་ ཀྲོང་གསར་ལུ་ཕེབས་ཚུགས་ནུག། ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་སྲོག་ ཆོས་གཟིམ་རང་གི་སྲོག་བ་ལྷགཔ་སྦེ་བདག་འཛིན་དང་ སྲོག་སྐྱབས་འབད་མི་གི་གཟེངས་བསྟོད་ལུ་ མགྲོན་གཉེར་གྱི་གོ་གནས་ཁར་བསྐོས་གནངམ་མ་ཚད་ མཚོ་སྐྱེས་རྡོ་རྗེ་ཁོ་ར་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་ཁྲི་ལས་དགོངས་ཞུ་མཛདཔ་ད་ མཚོ་སྐྱེས་རྡོ་རྗེ་གི་བུ་ ཆོས་གཟིམ་བརྩོན་འགྲུས་རྒྱལ་མཚན་གྱི་ཧེ་མ་ མགྲོན་གཉེར་འཇིགས་མེད་རྣམ་རྒྱལ་ ལོ་གསུམ་གྱི་རིང་ལུ་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་གོ་གནས་གནང་དགོ་པའི་ཞལ་ཆེམས་བཞག་ནུག། <br>
+འཇིགས་མེད་རྣམ་རྒྱལ་ མགྲོན་གཉེར་གྱི་གོ་གནས་ལུ་བཞུགསཔ་ད་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་བཀའ་ལས་མ་འགལཝ་ཅིག་སྦེ་ ཕྱག་ཕྱིད་ཞུ་ཡོདཔ་མ་ཚད་ ཤུལ་མ་ སྤྱི་ལོ་ ༡༨༥༣ ཆུ་གླང་གི་ལོ་ལུ་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ཁྲི་ལས་དགོངས་ཞུ་མཛདཔ་ད་ ཧེ་མ་གི་ཁ་ཆེམས་ལྟར་དུ་ མགྲོན་གཉེར་འཇིགས་མེད་རྣམ་རྒྱལ་འདི་ དགུང་ལོ་ ༢༩ བཞེསཔ་ད་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག། མགྲོན་གཉེར་འཇིགས་མེད་རྣམ་རྒྱལ་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་ཁྲི་ལུ་བྱོན་གནང་པའི་ཤུལ་ལུ་ ཀྲོང་གསར་དཔོན་སློབ་ཁོ་རའི་ས་ཁོངས་ཀྱི་མི་སེར་རྐྱངམ་གཅིག་གིས་མ་དོ་བར་ དཔོན་སློབ་མཆོག་གིས་ བསྟན་པ་དང་སེམས་ཅན། ཆོས་དང་སྲིད་ལུ་ཕན་པའི་ཕྱག་ལཱ། དེ་ལས་ དཔོན་སློབ་ཁག་གི་བར་ན་ དམག་འཁྲུག་དང་ནང་འཁྲུག་ཚུ་ཞི་ཐབས་ཀྱི་ཕྱག་ལཱ་མང་རབས་ཅིག་མཛད་གནང་ནུག། ཧེ་མ་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ཞལ་ཆེམས་ནང་ མགྲོན་གཉེར་འཇིགས་མེད་རྣམ་རྒྱལ་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་ཁྲི་ལུ་ལོ་གསུམ་མ་གཏོགས་ བཞུགས་མ་ཆོགཔ་སྦེ་ཡོད་རུང་ མགྲོན་གཉེར་གྱིས་ དེ་ལུ་ ཡ་འབད་མ་བཏུབ་པར་ ཆོས་རྩེ་དཔོན་སློབ་བགྲེསཔ་མཚོ་སྐྱེས་རྡོ་རྗེ་གི་སྲས་ ཆོས་གཟིམ་བརྩོན་འགྲུས་རྒྱལ་མཚན་དང་གཅིག་ཁར་ ནང་འཁྲུག་སྦོམ་ར་བྱུང་ནུག། ཨིན་རུང་ དགེ་འདུན་སྡེ་གིས་ ནང་འཁྲུག་ཞི་ཐབས་ལུ་ འཇིགས་མེད་རྣམ་རྒྱལ་ ཀྲོང་གསར་དཔོན་སློབ་རང་འཇགས་དང་ བརྩོན་འགྲུས་རྒྱལ་མཚན་ལུ་ བྱ་དཀར་རྫོང་དཔོན་གྱི་གོ་གནས་དེ་ དཔོན་སློབ་ཀྱི་གོ་གནས་ལུ་ཡར་སེང་མཛད་དེ་ བསྐོ་བཞག་མཛད་པའི་ཁར་ ཤར་ཕྱོགས་ཀྱི་ས་ཕྱོགས་ཚུ་ཡང་ དཔོན་སློབ་གཉིས་ཀྱི་བར་ན་ བགོ་བཤའ་རྐྱབ་སྟེ་གནང་ནི་འདི་གིས་ནང་འཁྲུག་ཞི་སྟེ རྒྱལ་ཁབ་ནང་སྔར་བ་ལྷག་པའི་ཞི་བདེ་འཕེལ་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་པའི་ལོ་རྒྱུས། 	 ====
+<big>དེ་བསྒང་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་ཟེར་བའི་མིང་དེ་ འབྲུག་རྒྱལ་ཁབ་ནང་ གཏམ་སྙན་གྲགས་སྦོམ་བྱུང་ཡོད་ནི་འདི་གིས་ བར་སྐབས་ཅིག་ སྡེ་ཁྲི་གུར་ག་བསྐོ་བཞག་མཛད་རུང་ ལོ་གཅིག་ར་མ་ལངསམ་ལས་ ཁྲི་ཐོག་ལུ་གཤགས་ནི་ལ་སོགས་པའི་རྐྱེན་ངན་བྱུང་སྟེ་ར་སྡོད་ནི་འདི་གིས་ གཞུང་ཡང་ལྷན་ཚོགས་ཀྱིས་སྐྱོང་གནང་ཡོདཔ་ཨིན་མས། ཨིན་རུང་ ལྷན་ཚོགས་ཀྱི་ནང་འཁོད་ མ་འགྲིགསཔ་འབྱུང་དོ་ཡོདཔ་ལས་ སྤུངས་རྫོང་པ་བྲང་བཀྲ་ཤིས། དབང་རྫོངཔ་ཀ་ཝང་སངས་རྒྱས། ཐིམ་རྫོངཔ་བླམ་ཚེ་དབང་། སྤ་རོ་དཔོན་སློབ་ཕྲིན་ལས་བཟང་པོ་ལ་སོགས་པ། གཞུང་དགེ་འདུན་འདུས་ཚོགས་དང་། རྗེ་མཁན་ཁྲི་རབས་སོ་དྲུག་པ་ རྗེ་ཡོན་ཏན་དཔལ་བཟང་ཚུ་ཐུགས་མཐུན་ཐོག་ལས་ ཀྲོང་གསར་དཔོན་སློབ་བགྲེསཔ་ འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ང་གསུམ་པའི་ཁྲི་ལུ་ སྤྱི་ལོ་ ༡༨༧༠ གི་ལོ་ལུ་ ཁྲི་མངའ་གསོལ་ཞུ་ནུག།</big> 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ།	 ====
+<big>དཔོན་སློབ་བགྲེསཔ་འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་ སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་མ་ བསྟན་པ་དང་སེམས་ཅན་ལུ་ཕན་པའི་ཕྱག་ལཱ་མང་རབས་ཅིག་མཛད་གནང་ནུག། དེ་ཡང་ སྤྱི་ལོ་ ༡༨༦༩ གི་ལོ་ལུ་ སྤུངས་རྫོངཔ་དང་དབང་རྫོང་པ་གཉིས་ཀྱི་བར་ན་ ནང་འཁྲུག་སྦོམ་ལངམ་ད་ ཐིམ་ཕུག་རྫོང་ལུ་ཡང་ གནོད་རྐྱེན་སྦོམ་བྱུང་སྟེ་ཡོད་མི་དེ་ མི་རྗེ་འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་གིས་ ཉམས་གསོ་ཞུ་གནང་ནུག། དེ་ནང་གི་ནང་རྟེན་ཚུ་ཡང་ ལ་ལུ་གསར་བཞེངས་མཛད་པའི་ཁར་ ཉམས་བཅོས་འབད་བཏུབ་མི་ཚུ་ཉམས་བཅོས་མཛད་གནང་ནུག། དེ་ལས་ རྫོང་དེ་བསྒྲུབས་པའི་ཤུལ་ལུ་ དགེ་འདུན་དམངས་ གསོལ་ཐབ་སེམས་རྟོགས་ཁ་ལུ་བཞུགས་ཡོད་མི་དེ་ཚུ་ བཀྲ་ཤིས་ཆོས་རྫོང་ནང་གདན་འདྲེན་ཞུ་ཞིནམ་ལས་ ཆོས་གོས་ན་བཟའ་རེ་རེ་ཕུལ་སྟེ བརྙེན་བཀུར་ཡང་ག་དེ་དྲག་དྲག་ཞུ་གནང་ནུག།</big> 
+==== སྡེ་སྲིད་ལུ་ངོ་རྒོལ་བྱུང་པའི་སྐོར།	 ====
+<big>སྤ་རོ་དཔོན་སློབ་བགྲེསཔ་ཉིམ་རྡོ་རྗེ་དང་ སྤ་རོ་དཔོན་སློབ་ཁྲི་པའི་ཚ་བོ་ ཚེ་དབང་ནོར་བུ་གཉིས་ མ་འགྲིགསཔ་ཐོན་ཡོདཔ་མ་ཚད་ ཚེ་དབང་ནོར་བུ་གིས་ མི་རྗེ་འཇིགས་མེད་རྣམ་རྒྱལ་ལུ་ཡང་ ངོ་ལོ་རྐྱབ་མི་ལུ་བརྟེན་ མི་རྗེ་ཁོ་རའི་་ སྐུ་ཚབ་སྦེ་ ཀ་ཝང་མ་མཁལ་དེ་དམག་ལུ་བཏང་ནུག། དེའི་སྐབས་ གལ་སྲིད་ཀ་ཝང་མ་མཁལ་གྱིས་དམག་དེ་ལས་རྒྱལ་ཁ་ཐོབ་པ་ཅིན་ སྤ་རོ་དཔོན་སློབ་ཀྱི་གོ་གནས་འདི་ ཁོ་ལུ་དགོཔ་སྦེ་ཞུ་སྟེ་ དམག་རྐྱབ་པར་ཡར་སོ་ནུག། སྤོ་རོ་དཔོན་སློབ་བགྲེསཔ་ཉིམ་རྡོ་རྗེདང་ ཀ་ཝང་མ་མཁལ་གཉིས་ ཧེ་མ་ལས་ ཆ་རོགས་འཆམ་ཤོས་ཅིག་འབད་ནི་འདི་གིས་ ཕར་ལྷོདཔ་ད་ དམག་རྐྱབ་ནི་མེན་པར་ ནང་འགྲིག་རྐྱབ་སྟེ་ དཔོན་སློབ་བགྲེསཔ་བྱོག་འགྱོ་ཡོདཔ་དང་ ཀ་ཝང་མ་མཁལ་ཁོ་ར་དཔོན་སློབ་ཀྱི་གོ་གནས་བཞེས་བཞུགས་ནུག། <br>
+ཨིན་རུང་ གནས་ཚུལ་དེ་སྡེ་སྲིད་ཀྱིས་གསནམ་ཅིག་ སྡེ་སྲིད་ཀྱི་གཉའ་རྒོད་སྟོདཔ་ཆུ་ཤིང་ཟེར་མི་དེ་བཏང་སྟེ་ ཀ་ཝང་མ་མཁལ་བཀྲོངས་ཞིནམ་ལས་ དཔོན་སློབ་ཀྱི་ཁྲི་ལུ་ལོག་སྟེ་ར་ ཉིམ་རྡོ་རྗེ་བཞག་ཡོདཔ་དང་ སྡེ་སྲིད་ཀྱི་སྐུ་ཚབ་གཉིས་ སྤ་རོ་ལུ་བཞག་ནི་གི་སྲོལ་འགོ་བཙུགས་ནུག།</big> 
+==== སྡེ་སྲིད་ཀྱི་མཛད་པ་མཐའ་མ།	 ====
+ 
+<big>སྤྱི་ལོ་ ༡༨༧༣ གི་ལོ་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ང་གསུམ་པ་ འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་གིས་ ཁོ་རའི་སྐུ་ཉེ་སྐྱིད་ཚལཔ་ གོང་གཟིམ་རྡོ་རྗེ་རྣམ་རྒྱལ་དེ་ སྡེ་སྲིད་ཁྲི་རབས་ང་བཞི་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་བའི་ཤུལ་ལུ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་གནང་ནུག།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
