--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -799,6 +799,27 @@
  
 <big>སྤྱི་ལོ་ ༡༨༧༣ གི་ལོ་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ང་གསུམ་པ་ འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་གིས་ ཁོ་རའི་སྐུ་ཉེ་སྐྱིད་ཚལཔ་ གོང་གཟིམ་རྡོ་རྗེ་རྣམ་རྒྱལ་དེ་ སྡེ་སྲིད་ཁྲི་རབས་ང་བཞི་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་བའི་ཤུལ་ལུ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་གནང་ནུག།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ང་བཞི་པ་ གོང་གཟིམ་རྡོ་རྗེ་རྣམ་རྒྱལ་གྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་མ་མཛད་པའི་ཧེ་མའི་མཛད་རྣམ།	 ====
+	
+<big>སྡེ་སྲིད་ཁྲི་རབས་ང་བཞི་པ་ སྐྱིད་ཚལ་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་མཆོག་ མང་སྡེ་བོན་སྦྱིས་ལུ་ དུང་དཀར་ཆོས་རྗེ་གི་བརྒྱུད་པ་ པཱ་ལ་རྒྱལ་མཚན་གྱི་སྲས་ལུ་འཁྲུངས་ཏེ་ མཚན་རྡོ་རྗེ་རྣམ་རྒྱལ་ཟེར་གསོལ་ཡོད་རུང་ ཤུལ་མ་གཞུང་ཕྱོགས་ལུ་བཞུགསཔ་ད་ ས་གནས་མུ་ཏིག་ཐང་ལུ་ སྐྱིད་པའི་ཚལ་ཟེར་དར་ཁྱབ་སོང་ཡོད་མི་གདན་ས་དང་བཅས་ གཙུག་ལག་ཁང་བཅགས་ཞིནམ་ལས་འགོ་བཟུང་ མཚན་སྐྱིད་ཚལ་པ་ཟེར་ཞུ་སྲོལ་དར་ནུག།
+</big>
+==== གོ་གནས་བཞེས་པའི་སྐོར། 	 ====
+	
+<big>སྡེ་སྲིད་སྐྱིད་ཚལ་པ་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ ཀྲོང་གསར་རྫོང་ནང་སྒར་ལྟོ་སྦེ་འཛུལ་ཡོདཔ་ཨིན་པས། དེའི་བསྒང་ འཇིགས་མེད་རྣམ་རྒྱལ་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་གཟིམ་དཔོན་དང་ མགྲོན་གཉེར་གྱི་ཕྱག་འགན་བཞེས་བཞུགསཔ་ད་ དམག་གི་བྱེལཝ་ག་ཏེ་འཐོན་སར་ སྐྱིད་ཚལ་པ་མཆོག་གིས་ ལྷག་བསམ་རྣམ་དག་གི་སྒོ་ལས་ཕྱག་ཞུ་བ་ལུ་བརྟེན་ འཇིགས་མེད་རྣམ་རྒྱལ་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་ཁྲི་ལུ་འབྱོནམ་ད་ སྐྱིད་ཚལ་པ་མཆོག་ གདུང་བསམ་གསང་སྲུང་པའི་གོ་གནས་གནང་ཡོདཔ་མ་ཚད་ ཤུལ་མ་ འཇིགས་མེད་རྣམ་རྒྱལ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་འབྱོནམ་ད་ སྐྱིད་ཚལ་པ་མཆོག་ གོང་གཟིམ་གྱི་གོ་གནས་ལུ་བསྐོ་བཞག་གནང་ནུག།</big> 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་སྐོར། ==== 
+			
+<big>སྡེ་སྲིད་ཁྲི་རབས་ང་གསུམ་པ་ འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་ སྤྱི་ལོ་ ༡༨༧༣ གི་ལོ་ལུ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛདཔ་ད་ འཇིགས་མེད་རྣམ་རྒྱལ་ཁོ་རའི་སྐུ་ཉེ་ གོང་གཟིམ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ང་བཞི་པའི་ཁྲི་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། 	 ====
+		
+<big>གོང་གཟིམ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་ སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་ལུ་ གདན་ས་བཀྲི་ཤིས་ཆོས་རྫོང་ནང་ལུ་སྦེ་ མི་འཁྲུགས་པའི་ལྷ་ཁང་གསར་བཞེངས་ཀྱི་ཕྱག་ལཱ་གནང་ཡོདཔ་མ་ཚད་ ཕ་ཇོ་སྡིངས་ཀྱི་འོག་ མུ་ཏིག་ཐང་གི་སྟོད་ལུ་ སྐྱིད་ཚལ་པའི་ལྷ་ཁང་གསར་བཞེངས་ཀྱི་ཕྱག་འགན་ཡང་བཞེས་གནང་ནུག། དེ་ལས་ དེ་ནང་གི་ནང་རྟེན་མཆོད་ཆས་དང་ མཆོད་རྫས་ལ་སོགས་པ་གསར་སྒྲུབ་མཛད་གནང་ནུག། དེ་གིས་མ་ཚད་ གདན་ས་ཐེད་ཐིམ་གཉིས་ཆ་རའི་ཕྱག་མཛོད་ནང་ ཟོང་ཆ་དང་།ཇ་དང་ཚྭ་ལ་སོགས་པའི་ཕྱག་མཛོད་གསར་བཙུགས་མཛད་གནང་ནུག།</big> 
+==== རྗེ་མཁན་ཁྲི་རབས་སོ་བརྒྱད་པ་དང་སོ་དགུ་པ་ཁྲི་མངའ་གསོལ་མཛད་པའི་སྐོར། 	 ====
+	
+<big>མཁན་ཁྲི་སོ་བདུན་པ་རྗེ་ཀུན་དགའ་སེང་གེ་མཆོག་ སྤྱི་ལོ་ ༡༨༧༥ གི་ལོ་ལུ་ རྗེའི་ཁྲི་ཐོག་ལུ་ར་དགོངས་པ་རྫོགས་སོཔ་ལས་ རྗེ་ཁྲི་ཟུར་ཤཱཀྱ་རྒྱལ་མཚན་མཆོག་ ལྷ་རྫོང་བཀྲ་ཤིས་སྒང་ལུ་གདན་འདྲེན་ཞུ་སྟེ་ རྗེ་མཁན་ཁྲི་རབས་སོ་བརྒྱད་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ཡོད་རུང་ རྗེ་ཤཱཀྱ་རྒྱལ་མཚན་མཆོག་ རྗེ་མཁན་གྱི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་བའི་ལོ་དེ་ནང་ར་ དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོཔ་ལས་ སྒྲ་སློབ་བློ་གྲོས་རྒྱལ་མཚན་མཆོག་ རྗེ་མཁན་ཁྲི་རབས་སོ་དགུ་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག་གོ།།</big>
+==== སྡེ་སྲིད་ང་བཞི་པའི་མཛད་རྣམ་མཐའ་མ། ==== 
+			
+<big>སྡེ་སྲིད་སྐྱིད་ཚལ་པ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་ ཆོས་སྲིད་གཉིས་ཆ་ར་ལུ་ཕན་པའི་ཕྱག་ལཱ་མཛད་བཞུགས་པའི་བར་ན་ར་ སྡེ་སྲིད་ཁོ་རའི་སྲུང་འཁོརཔ་སྤ་ཕྲུག་ཟེར་མི་གིས་ཞུཝ་བཞིན་དུ་ རྗེ་མཁན་ཁྲི་རབས་སོ་དགུ་པ་སྒྲ་སློབ་བློ་གྲོས་རྒྱལ་མཚན་མཆོག་ སྐུ་གཟུགས་མ་བདེ་བར་ ཆུ་ཕོ་ཚ་ཆུ་ལུ་བྱོན་ཏེ་བཞུགས་པའི་སྐབས་ མཚན་སློབ་པད་དཀར་འོད་ཟེར་མི་དེ་ མཁན་ཁྲི་ ༤༠ པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ད་ནུག། དེ་ལུ་གཟིགས་ཏེ་ མཁན་ཁྲི་སོ་དགུ་པ་ཤཱཀྱ་རྒྱལ་མཚན་ཐུགས་ལུ་ ང་རྒྱལ་དྲག་པོ་བསྐྱེད་དེ་ དགོངས་འདུས་རྟ་ནག་གི་སྒོ་ལས་ ལས་སྦྱོར་མཛད་པ་ལུ་བརྟེན་ སྤྱི་ལོ་ ༡༨༧༩ གི་ལོ་ལུ་ སྡེ་པ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་ ཚེ་བསྟུངས་ཏེ་གཤགས་སོ་ནུག་གོ།།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
